<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:textColor="#17CD0A"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:text= "Gasto da Viagem"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/distance"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/total_km" />

    <EditText
        android:id="@+id/edit_Price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/Price"
        android:inputType="numberDecimal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/price_per_liter" />


    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/kms_per_liter" />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/total_spend"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/total_value"
        android:textAllCaps="true"
        android:textColor="#17CD0A"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:backgroundTint="#17CD0A"
        android:padding="18dp"
        android:text="@string/calculate"
        android:textColor="#FFF3F3"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:backgroundTint="#6114EC"
        android:textColor="@color/white"
        android:padding="18dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Zerar"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:src="@drawable/baseline_directions_car_filled_24" />
</LinearLayout>
